# VideoMinutesGenerator

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  readme.md
api/: __init__.py  app.py  auth.py  models.py  repository.py  routes.py  service.py
config/: correction_dict.yaml  default.yaml
docs/: architecture.md  evaluation-plan.md  requirements.md  task-breakdown.md  test-plan.md
eval/results/CASE-01/: eval.yaml
eval/results/CASE-02/: eval.yaml
eval/results/CASE-03/: eval.yaml
eval/results/CASE-05/: eval.yaml
eval/samples/: README.md
eval/samples/CASE-01/: meta.yaml
eval/samples/CASE-02/: meta.yaml
eval/samples/CASE-03/: meta.yaml
eval/samples/CASE-05/: meta.yaml
src/vmg/: __main__.py  cli.py
src/vmg/analysis/extractor/: __init__.py
src/vmg/analysis/input_builder/: __init__.py
src/vmg/analysis/postprocess/: __init__.py
src/vmg/asr/: __init__.py  corrector.py
src/vmg/common/: config.py  interfaces.py  logger.py  models.py
src/vmg/export/: __init__.py
src/vmg/formatter/: __init__.py
src/vmg/ingest/: __init__.py
src/vmg/pipeline/: __init__.py
src/vmg/preprocess/: __init__.py
tests/integration/: test_e2e_pipeline.py
tests/unit/: test_analysis_extractor.py  test_analysis_input_builder.py  test_analysis_postprocess.py  test_analysis_validator.py  test_api.py  test_api_repository.py  test_asr.py  test_cli.py  test_config.py  test_corrector.py  test_export.py  test_formatter.py  test_ingest.py  test_interfaces.py  test_logger.py  test_models.py  test_pipeline.py  test_preprocess.py
(+2 files in other folders)
